Closed Bug 334683 Opened 20 years ago Closed 20 years ago

Extraneous semicolons cause "Empty declaration" compiler warnings

Categories

(NSS :: Libraries, defect)

3.11
HP
HP-UX
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

There is an extraneous semicolon after the nssCertificateStore_Check function definition in pkistore.h, which causes an "Empty declaration" compiler warning from HP's C compiler: cc -o HP-UXB.11.11_OPT.OBJ/certificate.o -c -O -DHPUX10 -Ae +Z -DHPUX -Dhppa -D_ HPUX_SOURCE -D_USE_BIG_FDS +DAportable +DS2.0 -DHPUX11 -DXP_UNIX -DNSS_3_4_CODE -UDEBUG -DNDEBUG -DNSS_ENABLE_ECC -I../../../../dist/HP-UXB.11.11_OPT.OBJ/includ e -I../../../../dist/public/nss -I../../../../dist/private/nss -I../../../../di st/public/nspr certificate.c cc: "pkistore.h", line 117: warning 558: Empty declaration. cc -o HP-UXB.11.11_OPT.OBJ/cryptocontext.o -c -O -DHPUX10 -Ae +Z -DHPUX -Dhppa - D_HPUX_SOURCE -D_USE_BIG_FDS +DAportable +DS2.0 -DHPUX11 -DXP_UNIX -DNSS_3_4_COD E -UDEBUG -DNDEBUG -DNSS_ENABLE_ECC -I../../../../dist/HP-UXB.11.11_OPT.OBJ/incl ude -I../../../../dist/public/nss -I../../../../dist/private/nss -I../../../../ dist/public/nspr cryptocontext.c cc: "pkistore.h", line 117: warning 558: Empty declaration. There is another extraneous semicolon after the SEC_ASN1_MKSUB macro expansion in certutil.c: cc -o HP-UXB.11.11_OPT.OBJ/certutil.o -c -O -DHPUX10 -Ae +Z -DHPUX -Dhppa -D_HPU X_SOURCE -D_USE_BIG_FDS +DAportable +DS2.0 -DHPUX11 -DXP_UNIX -DNSPR20 -DNSS_ENA BLE_ECC -UDEBUG -DNDEBUG -DNSS_ENABLE_ECC -I../../../../dist/HP-UXB.11.11_OPT.OB J/include -I../../../../dist/public/nss -I../../../../dist/private/nss -I../. ./../../dist/public/dbm -I../../../../dist/public/seccmd certutil.c cc: "certutil.c", line 1564: warning 558: Empty declaration.
Attached patch Proposed patchSplinter Review
Remove the extraneous semicolons.
Attachment #219028 - Flags: review?(alexei.volkov.bugs)
Attachment #219028 - Flags: review?(alexei.volkov.bugs) → review+
I checked in the patch on the NSS trunk (3.12). Checking in cmd/certutil/certutil.c; /cvsroot/mozilla/security/nss/cmd/certutil/certutil.c,v <-- certutil.c new revision: 1.101; previous revision: 1.100 done Checking in lib/pki/pkistore.h; /cvsroot/mozilla/security/nss/lib/pki/pkistore.h,v <-- pkistore.h new revision: 1.9; previous revision: 1.8 done
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.12
Assignee: nobody → wtchang
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: