Bugzilla bug 334683: removed extraneous semicolons. r=alexei.volkov. Modified files: cmd/certutil/certutil.c lib/pki/pkistore.h