security/nss/lib/pki/pkistore.h
@@ -114,7 +114,7 @@ static void nssCertificateStore_Check(nssCertificateStoreTrace* a,
 
     PORT_Assert(a->lock == b->lock);
     PORT_Assert(a->store == b->store);
-};
+}
 
 NSS_EXTERN void
 nssCertificateStore_Lock (
